Fixed gulpfile/index generation/loading

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <script type="text/javascript" src="./node_modules/ractive/ractive.js"></script>
-        <script type="text/javascript" src="./index.umd.js"></script>
+        <script type="text/javascript" src="./index.js"></script>
     </head>
     <body>
         <div id="todo">
