--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <script type="text/javascript" src="./node_modules/ractive/ractive.js"></script>
         <script type="text/javascript" src="./index.js"></script>
+        <style type="text/css">
+        <!--/* <![CDATA[ */
+        li {
+            list-style-type: '';
+        }
+        .checked {
+            text-decoration: line-through;
+        }
+        /* ]]> */-->
+        </style>
     </head>
     <body>
         <div id="todo">
