--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
         li {
             list-style-type: '';
         }
+        ul {
+            margin-left: 0;
+        }
         .checked {
             text-decoration: line-through;
+        }
+        fieldset input[type="checkbox"] {
+            display: block;
+            float: left;
+            width: 4em;
         }
         /* ]]> */-->
         </style>
